--- a/index.html
+++ b/index.html
@@ -83,21 +83,25 @@
     <div class="education">
         <br>
         <h1>Education</h1><br>
+          <h1 class="heading"><i class="fas fa-graduation-cap"></i> My <span>Education</span></h1>
+          <p class="qoute">Education is not the learning of facts, but the training of the mind to think.</p>
+
        
     <div class="edu">
-
-        <img src="jiit.jpeg" alt="JIIT">
-        <h4>Bachelor of Technology</h4><br>
-        <h4>Jaypee Institute of Information Technology</h4><br>
-        <h4>2022-2026 (Pursuing)</h4>
+         <div class="eduimg">
+        <img draggable="false" src="./assets/images/clg.jpg" alt="">
+        </div>
+        <h3>Bachelor of Technology</h3>
+        <p>Jaypee Institute of Information and Technology | JIIT</p>
+        <h4>2022-2026 | Pursuing</h4>
         </div>
  
         <div class="eduimg">
         <img draggable="false" src="./assets/images/clg.jpg" alt="">
         </div>
         <div class="edu">
-        <h4>PCM</h4> <br>
-        <h4>St. Anselm's North City School | CBSE</h4>
+        <h3>PCM</h3> 
+        <p>St. Anselm's North City School | CBSE</p>
         <h4>2020-2022 </h4>
         </div>
         <br><br>
