--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 </div><br><br>
 </div>
 </section>
-
+<!--
 <section class="Education" id="Education">
 
   
@@ -108,6 +108,38 @@
     
 </div>
 </section>
+-->
+<section class="education" id="education">
+
+  <h1 class="heading"><i class="fas fa-graduation-cap"></i> My <span>Education</span></h1>
+
+    <div class="box-container">
+
+    <div class="box">
+        <div class="image">
+        <img draggable="false" src="./assets/images/clg.jpg" alt="">
+        </div>
+        <div class="content">
+        <h3>Bachelor of Technology</h3>
+       <p>Jaypee Institute of Information and Technology | JIIT</p>
+        <h4>2022-2026 | Pursuing</h4>
+        </div>
+    </div>
+
+    <div class="box">
+      <div class="image">
+      <img draggable="false" src="./assets/images/clg.jpg" alt="">
+      </div>
+      <div class="content">
+      <h3>Science | PCM</h3>
+      <p>St. Anselm's North City School | CBSE</p>
+      <h4>2020-2022 | Completed</h4>
+      </div>
+    </div>
+
+</div>
+</section>
+
 
 <section class="Experiences" id="Experiences">
 <div class="experience">
