--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     <br><br><br><br><br><br>
     <hr>
     <br>
-    <h3> &copy; Copyrights 2023. All Rights Reserved</h3>
+    <h3> &copy; Copyrights (c) 2023. All Rights Reserved</h3>
     <br>
 </div>
 </div>
